Add multitenant to call_logs table
