# wazo_call_logd/plugins/cdr/resource.py
@@ -36,6 +36,7 @@ CSV_HEADERS = ['id',
                'destination_name',
                'destination_internal_extension',
                'destination_internal_context',
+               'destination_internal_tenant_uuid',
                'destination_user_uuid',
                'destination_tenant_uuid',
                'destination_line_id',
@@ -43,12 +44,15 @@ CSV_HEADERS = ['id',
                'call_direction',
                'requested_extension',
                'requested_context',
+               'requested_tenant_uuid',
                'requested_internal_extension',
                'requested_internal_context',
+               'requested_internal_tenant_uuid',
                'source_extension',
                'source_name',
                'source_internal_extension',
                'source_internal_context',
+               'source_internal_tenant_uuid',
                'source_user_uuid',
                'source_tenant_uuid',
                'source_line_id',
