# wazo_call_logd/plugins/cdr/schema.py
@@ -29,17 +29,21 @@ class CDRSchema(Schema):
     destination_extension = fields.String(attribute='destination_exten')
     destination_internal_context = fields.String()
     destination_internal_extension = fields.String(attribute='destination_internal_exten')
+    destination_internal_tenant_uuid = fields.UUID()
     destination_line_id = fields.Integer()
     destination_name = fields.String()
     destination_user_uuid = fields.UUID()
     destination_tenant_uuid = fields.UUID()
     requested_context = fields.String()
+    requested_tenant_uuid = fields.String()
     requested_extension = fields.String(attribute='requested_exten')
     requested_internal_context = fields.String()
     requested_internal_extension = fields.String(attribute='requested_internal_exten')
+    requested_internal_tenant_uuid = fields.UUID()
     source_extension = fields.String(attribute='source_exten')
     source_internal_context = fields.String()
     source_internal_extension = fields.String(attribute='source_internal_exten')
+    source_internal_tenant_uuid = fields.UUID()
     source_line_id = fields.Integer()
     source_name = fields.String()
     source_user_uuid = fields.UUID()
